<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Add_Employee">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_employee"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_centerVertical="false"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:ems="10"
            android:id="@+id/newName"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="125dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/newSalary"
            android:layout_alignParentBottom="true"
            android:hint="@string/salary"
            android:autofillHints="@string/salary"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/newAge"
            android:layout_alignParentBottom="true"
            android:hint="@string/age"
            android:autofillHints="@string/age"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="275dp" />

    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="350dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_navigation"
            app:itemBackground="@color/colorPrimaryDark"
            app:itemTextColor="@drawable/selector"
            app:itemIconTint="@drawable/selector"
            app:menu="@menu/menu_navigation"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>